--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react-dom": "^18.0.0",
     "@types/redux-logger": "^3.0.9",
     "@types/styled-components": "^5.1.26",
+    "@typescript-eslint/types": "^5.53.0",
     "axios": "^1.3.4",
+    "eslint": "^8.34.0",
     "eslint-config-react-app": "^7.0.1",
     "formik": "^2.2.9",
     "react": "^18.2.0",
