--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "redux-saga": "^1.2.2",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yup": "^1.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
