--- a/package.json
+++ b/package.json
@@ -35,7 +35,10 @@
     "yup": "^1.0.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "dev": "concurrently \"yarn start:client\" \"yarn start:server\"",
+    "install": "yarn install && cd server && yarn install",
+    "start:client": "react-scripts start",
+    "start:server": "cd server && yarn server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
