--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/types": "^5.53.0",
     "axios": "^1.3.4",
+    "concurrently": "^8.2.2",
     "eslint": "^8.34.0",
     "eslint-config-react-app": "^7.0.1",
     "formik": "^2.2.9",
@@ -36,7 +37,6 @@
   },
   "scripts": {
     "dev": "concurrently \"yarn start:client\" \"yarn start:server\"",
-    "install": "yarn install && cd server && yarn install",
     "start:client": "react-scripts start",
     "start:server": "cd server && yarn server",
     "build": "react-scripts build",
